--- a/cumulos_globulares.ipynb
+++ b/cumulos_globulares.ipynb
@@ -76,10 +76,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 60,
    "outputs": [],
    "source": [
-    "# # Calcular las coordenadas usando radianes\n",
+    "# Calcular las coordenadas usando radianes\n",
     "data['x'] = data['Rsun'] * np.cos(np.radians(data['_RAJ2000']*15)) * np.cos(np.radians(data['_DEJ2000']))\n",
     "data['y'] = data['Rsun'] * np.sin(np.radians(data['_RAJ2000']*15)) * np.cos(np.radians(data['_DEJ2000']))\n",
     "data['z'] = data['Rsun'] * np.sin(np.radians(data['_DEJ2000']))"
