--- a/cumulos_globulares.ipynb
+++ b/cumulos_globulares.ipynb
@@ -209,17 +209,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'\\nNo parece estar muy cerca del centro de la galaxia.\\nAunque la constelación de Sagitario apunta hacia la dirección del centro galáctico,\\nasumo que las estrellas individuales en la constelación pueden estar dispersas en una amplia área del cielo.\\nAlnasl es solo una de las estrellas en Sagitario y su posición puede estar más cerca o más lejos y\\naparentar estar en el mismo centro desde nuestra perspectiva.\\n'"
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "No parece estar muy cerca del centro de la galaxia.\n",
@@ -230,16 +221,20 @@
     "\"\"\""
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 61,
    "outputs": [],
    "source": [
     "# Radio del cúmulo en parsecs\n",
-    "data['radio_parsecs'] = data['Rsun'] * np.tan(np.deg2rad(data['Rh'] / 60))  # Suponiendo que Rh está en minutos de arco\n",
+    "# Suponiendo que Rh está en minutos de arco\n",
+    "data['radio_parsecs'] = data['Rsun'] * np.tan(np.deg2rad(data['Rh'] / 60))\n",
     "radio_promedio = data['radio_parsecs'].mean()"
    ],
    "metadata": {
@@ -301,15 +296,6 @@
     "print(f\"Posición de Alnasl (Gamma Sagittarii) en Sagitario: {x_star, y_star, z_star}\")\n",
     "print(f\"Radio promedio de los cúmulos en parsecs: {radio_promedio}\")"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
