Add plotly html.

--- a/cumulos_globulares.ipynb
+++ b/cumulos_globulares.ipynb
@@ -12,26 +12,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
-    "id": "FI0SboU6uDjQ"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pandas in /Users/daiangan/Python Virtual Environments/venv_dataspell1/lib/python3.9/site-packages (1.5.3)\r\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Users/daiangan/Python Virtual Environments/venv_dataspell1/lib/python3.9/site-packages (from pandas) (2022.2.1)\r\n",
-      "Requirement already satisfied: numpy>=1.20.3 in /Users/daiangan/Python Virtual Environments/venv_dataspell1/lib/python3.9/site-packages (from pandas) (1.23.3)\r\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/daiangan/Python Virtual Environments/venv_dataspell1/lib/python3.9/site-packages (from pandas) (2.8.2)\r\n",
-      "Requirement already satisfied: six>=1.5 in /Users/daiangan/Python Virtual Environments/venv_dataspell1/lib/python3.9/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\r\n",
-      "\u001B[33mWARNING: You are using pip version 21.3.1; however, version 23.2.1 is available.\r\n",
-      "You should consider upgrading via the '/Users/daiangan/Python Virtual Environments/venv_dataspell1/bin/python -m pip install --upgrade pip' command.\u001B[0m\r\n"
-     ]
+    "id": "FI0SboU6uDjQ",
+    "pycharm": {
+     "is_executing": true
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "!pip install pandas"
    ]
@@ -364,20 +353,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": null,
    "metadata": {
-    "id": "aTJgblERuDjV"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'\\nTrataré de graficar los cúmulos, el Sol y el centro de la Galaxia.\\n'"
-     },
-     "execution_count": 199,
-     "metadata": {},
-     "output_type": "execute_result"
+    "id": "aTJgblERuDjV",
+    "pycharm": {
+     "is_executing": true
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Trataré de graficar los cúmulos, el Sol y el centro de la Galaxia.\n",
@@ -386,33 +369,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": null,
    "metadata": {
-    "id": "qBH5b-jTuDjV"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: matplotlib in /Users/daiangan/Python Virtual Environments/venv_dataspell1/lib/python3.9/site-packages (3.7.2)\r\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /Users/daiangan/Python Virtual Environments/venv_dataspell1/lib/python3.9/site-packages (from matplotlib) (9.2.0)\r\n",
-      "Requirement already satisfied: pyparsing<3.1,>=2.3.1 in /Users/daiangan/Python Virtual Environments/venv_dataspell1/lib/python3.9/site-packages (from matplotlib) (3.0.9)\r\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /Users/daiangan/Python Virtual Environments/venv_dataspell1/lib/python3.9/site-packages (from matplotlib) (1.1.0)\r\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /Users/daiangan/Python Virtual Environments/venv_dataspell1/lib/python3.9/site-packages (from matplotlib) (4.42.1)\r\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/daiangan/Python Virtual Environments/venv_dataspell1/lib/python3.9/site-packages (from matplotlib) (1.4.5)\r\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /Users/daiangan/Python Virtual Environments/venv_dataspell1/lib/python3.9/site-packages (from matplotlib) (2.8.2)\r\n",
-      "Requirement already satisfied: cycler>=0.10 in /Users/daiangan/Python Virtual Environments/venv_dataspell1/lib/python3.9/site-packages (from matplotlib) (0.11.0)\r\n",
-      "Requirement already satisfied: numpy>=1.20 in /Users/daiangan/Python Virtual Environments/venv_dataspell1/lib/python3.9/site-packages (from matplotlib) (1.23.3)\r\n",
-      "Requirement already satisfied: packaging>=20.0 in /Users/daiangan/Python Virtual Environments/venv_dataspell1/lib/python3.9/site-packages (from matplotlib) (21.3)\r\n",
-      "Requirement already satisfied: importlib-resources>=3.2.0 in /Users/daiangan/Python Virtual Environments/venv_dataspell1/lib/python3.9/site-packages (from matplotlib) (6.0.1)\r\n",
-      "Requirement already satisfied: zipp>=3.1.0 in /Users/daiangan/Python Virtual Environments/venv_dataspell1/lib/python3.9/site-packages (from importlib-resources>=3.2.0->matplotlib) (3.8.1)\r\n",
-      "Requirement already satisfied: six>=1.5 in /Users/daiangan/Python Virtual Environments/venv_dataspell1/lib/python3.9/site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\r\n",
-      "\u001B[33mWARNING: You are using pip version 21.3.1; however, version 23.2.1 is available.\r\n",
-      "You should consider upgrading via the '/Users/daiangan/Python Virtual Environments/venv_dataspell1/bin/python -m pip install --upgrade pip' command.\u001B[0m\r\n"
-     ]
+    "id": "qBH5b-jTuDjV",
+    "pycharm": {
+     "is_executing": true
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "!pip install matplotlib"
    ]
@@ -487,24 +451,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": null,
    "metadata": {
-    "id": "jAnsUTLOuDjW"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: plotly in /Users/daiangan/Python Virtual Environments/venv_dataspell1/lib/python3.9/site-packages (5.16.1)\r\n",
-      "Requirement already satisfied: tenacity>=6.2.0 in /Users/daiangan/Python Virtual Environments/venv_dataspell1/lib/python3.9/site-packages (from plotly) (8.2.2)\r\n",
-      "Requirement already satisfied: packaging in /Users/daiangan/Python Virtual Environments/venv_dataspell1/lib/python3.9/site-packages (from plotly) (21.3)\r\n",
-      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /Users/daiangan/Python Virtual Environments/venv_dataspell1/lib/python3.9/site-packages (from packaging->plotly) (3.0.9)\r\n",
-      "\u001B[33mWARNING: You are using pip version 21.3.1; however, version 23.2.1 is available.\r\n",
-      "You should consider upgrading via the '/Users/daiangan/Python Virtual Environments/venv_dataspell1/bin/python -m pip install --upgrade pip' command.\u001B[0m\r\n"
-     ]
+    "id": "jAnsUTLOuDjW",
+    "pycharm": {
+     "is_executing": true
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "!pip install plotly"
    ]
